# res2df

./: .buildinfo  .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  authors.html  bandit.yml  contribution.html  csv2ecl.html  csv2res.html  ecl2csv.html  ecl2df.hook_implementations.html  ecl2df.html  genindex.html  glossary.html  history.html  index.html  installation.html  introduction.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pylint-ignore.md  pyproject.toml  readme.html  requirements.txt  requirements_dev.txt  res2csv.html  ruff.toml  scripts.html  search.html  searchindex.js  (+6 more)
.github/workflows/: check_opmkeywords.yml  codecov.yml  codeql.yml  ecl2df.yml  publish.yml  pythonpublish.yml  res2df.yml  style.yml  typing.yml
_modules/: ecl2df.html  index.html  logging.html  res2df.html
_modules/ecl2df/: common.html  compdat.html  compdat2df.html  csv2ecl.html  ecl2csv.html  eclfiles.html  equil.html  equil2df.html  faults.html  faults2df.html  fipreports.html  grid.html  grid2df.html  gruptree.html  gruptree2df.html  inferdims.html  nnc.html  nnc2df.html  parameters.html  pillars.html  (+12 more)
_sources/: authors.rst.txt  ecl2df.hook_implementations.rst.txt  ecl2df.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  modules.rst.txt  readme.rst.txt  usage.rst.txt
_static/: documentation_options.js
ci/: testkomodo.sh
docs/: authors.rst  conf.py  contribution.rst  copyright.rst  csv2ecl.rst  csv2res.rst  ecl2csv.rst  glossary.rst  history.rst  index.rst  installation.rst  introduction.rst  readme.rst  res2csv.rst  scripts.rst  usage.rst
ecl2df/: __init__.py  _table_index.py  _version.py  bulk.py  bulk_ecl2sumo.py  common.py  compdat.py  compdat2df.py  constants.py  csv2ecl.py  csv2eclsummary.py  df2eclsum.py  ecl2csv.py  ecl2df.common.html  ecl2df.compdat.html  ecl2df.constants.html  ecl2df.csv2ecl.html  ecl2df.ecl2csv.html  ecl2df.eclfiles.html  ecl2df.equil.html  ecl2df.faults.html  ecl2df.fipreports.html  ecl2df.grid.html  ecl2df.gruptree.html  ecl2df.hook_implementations.html  ecl2df.hook_implementations.jobs.html  ecl2df.html  ecl2df.inferdims.html  ecl2df.nnc.html  ecl2df.parameters.html  ecl2df.pillars.html  ecl2df.pvt.html  ecl2df.rft.html  ecl2df.satfunc.html  ecl2df.summary.html  ecl2df.trans.html  ecl2df.version.html  ecl2df.vfp._vfp.html  ecl2df.vfp._vfpcommon.html  ecl2df.vfp._vfpdefs.html  (+37 more)
res2df/: __init__.py  __version__.py  common.py  compdat.py  csv2ecl.py  csv2res.py  ecl2csv.py  eclfiles.py  equil.py  faults.py  fipreports.py  grid.py  gruptree.py  inferdims.py  nnc.py  parameters.py  pillars.py  pvt.py  res2csv.py  res2df.__version__.html  res2df.common.html  res2df.compdat.html  res2df.constants.html  res2df.csv2res.html  res2df.equil.html  res2df.faults.html  res2df.fipreports.html  res2df.grid.html  res2df.gruptree.html  res2df.hook_implementations.forward_model_steps.html  res2df.hook_implementations.html  res2df.hook_implementations.jobs.html  res2df.html  res2df.inferdims.html  res2df.nnc.html  res2df.opmkeywords.html  res2df.parameters.html  res2df.pillars.html  res2df.pvt.html  res2df.res2csv.html  (+24 more)
scripts/: runmetoupdate.sh
tests/: conftest.py  deactivated_test_wcon.py  test_bulk_uploading.py  test_common.py  test_comp.py  test_comp2df.py  test_compdat.py  test_eclfiles.py  test_equil.py  test_equil2df.py  test_ert_hooks.py  test_faults.py  test_faults2df.py  test_fipreports.py  test_grid.py  test_grid2df.py  test_gruptree.py  test_gruptree2df.py  test_hook_implementations.py  test_inferdims.py  test_init.py  test_integration.py  test_layers.py  test_logging.py  test_nnc.py  test_nnc2df.py  test_parameters.py  test_pillars.py  test_pvt.py  test_py38.py  test_resdatafiles.py  test_rft.py  test_rft2df.py  test_satfunc.py  test_satfunc2df.py  test_setting_name.py  test_summary.py  test_summary2df.py  test_summary_restarts.py  test_trans.py  (+10 more)
usage/: compdat.html  equil.html  fipreports.html  grid.html  gruptree.html  nnc.html  pillars.html  pvt.html  rft.html  satfunc.html  summary.html  trans.html  wcon.html  wellconnstatus.html
(+367 files in other folders)
