[build-system]
requires = [
    "setuptools>=28",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/res2df/version.py"

[project]
name = "res2df"
description = "Convert reservoir simulator input and output to DataFrames"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Håvard Berland", email = "havb@equinor.com" }
]
keywords = ["energy", "subsurface", "reservoir", "scientific", "engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
]

dynamic = ["version"]

dependencies= [
"resdata>=5.0.0-b0",
"resfo",
"networkx",
"numpy",
"opm>=2020.10.2",
"pandas",
"pyarrow",
"pyyaml>=5.1",
"treelib",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout"
]
style = ["pre-commit"]
types = [
    "mypy",
    "types-PyYAML",
    "types-python-dateutil",
    "types-setuptools",
    "types-networkx",
    "pandas-stubs",
]
docs = [
    "sphinx-autoapi",
    "ipython",
    "rstcheck",
    "setuptools",
    "sphinx < 9",
    "sphinx-argparse",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme >= 3.1.0.rc1",
]
ert = ["ert>=10.2.0b13"]

[project.urls]
Homepage = "https://github.com/equinor/res2df"
Repository = "https://github.com/equinor/res2df"
Documentation = "https://equinor.github.io/res2df/"

[project.entry-points.console_scripts]
csv2res = "res2df.csv2res:main"
res2csv = "res2df.res2csv:main"
res2arrow = "res2df.res2csv:main"

[project.entry-points.ert]
res2df_steps = "res2df.hook_implementations.forward_model_steps"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["res2df*"]

[tool.setuptools.package-dir]
res2df = "src/res2df"

[tool.setuptools.package-data]
res2df = ["opmkeywords/*", "py.typed", "svg_color_keyword_names.txt"]

[tool.mypy]
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = [
    "ert",
    "opm.*",
    "pyarrow", # should be removed for pyarrow > 21.0.0
    "resdata.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "integration: marks a test as an integration test",
    "requires_eclipse: A test that requires the Eclipse simulator"
]

[tool.rstcheck]
ignore_directives = ["argparse", "automodule"]
ignore_messages = ["Hyperlink target .* is not referenced"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "W",  # pycodestyle
  "I",  # isort
  "B",  # flake-8-bugbear
  "SIM",  # flake-8-simplify
  "F",  # pyflakes
  "PL",  # pylint
  "NPY",  # numpy specific rules
  "C4",  # flake8-comprehensions
  "PD",  # pandas-vet
  "RUF",  # ruff specific rules
  "UP",  # pyupgrade
  "ANN",  # flake8-annotations
  "FURB",  # refurb
  "PERF",  # perflint
  "PTH",  # flake8-use-pathlib
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
]
preview = true
ignore = [
  "PLW2901",  # redefined-loop-name
  "PLR2004",  # magic-value-comparison
  "PLR0915",  # too-many-statements
  "PLR0912",  # too-many-branches
  "PLR0911",  # too-many-return-statements
  "PLC2701",  # import-private-name
  "PLR6201",  # literal-membership
  "PLR0914",  # too-many-locals
  "PLR6301",  # no-self-use
  "PLW1641",  # eq-without-hash
  "PLR0904",  # too-many-public-methods
  "PLR1702",  # too-many-nested-blocks
  "PLW3201",  # bad-dunder-method-name
  "PD013",  # pandas-use-of-dot-stack
]

[tool.ruff.lint.extend-per-file-ignores]
"src/res2df/__init__.py" = ["PLC0414"]
"tests/*" = ["RUF005", "ANN", "FURB113", "PERF"]
"docs/*" = ["ANN"]

[tool.ruff.lint.pylint]
max-args = 20
